// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropMenu - Demo Basic 1`] = `
<div class="ui-example-child ui-example-child-drop-menu ui-example-child-drop-menu-0">
  <div class="ui-drop-menu">
    <div class="ui-drop-menu-bar">
      <div class="bar-item"><span>一级选项1</span></div>
    </div>
    <div class="ui-popup with-mask top" style="display:none;">
      <div name="ui-mask-fade" class="ui-popup-mask" style="display:none;"></div>
      <div name="ui-slide-down" class="ui-popup-box ui-slide-down" style="display:none;">
        <div class="ui-drop-menu-list">
          <div class="ui-radio-list is-align-center">
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="content">正文区域</div>
</div>
`;

exports[`DropMenu - Demo Custom menu options 1`] = `
<div class="ui-example-child ui-example-child-drop-menu ui-example-child-drop-menu-3">
  <div class="ui-drop-menu">
    <div class="ui-drop-menu-bar">
      <div class="bar-item"><span>一级选项1</span></div>
    </div>
    <div class="ui-popup with-mask top" style="display:none;">
      <div name="ui-mask-fade" class="ui-popup-mask" style="display:none;"></div>
      <div name="ui-slide-down" class="ui-popup-box ui-slide-down" style="display:none;">
        <div class="ui-drop-menu-list">
          <div class="ui-radio-list is-align-center">
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="content">正文区域</div>
</div>
`;

exports[`DropMenu - Demo Disabled item 1`] = `
<div class="ui-example-child ui-example-child-drop-menu ui-example-child-drop-menu-2">
  <div class="ui-drop-menu">
    <div class="ui-drop-menu-bar">
      <div class="bar-item selected"><span>排量</span></div>
      <div class="bar-item selected disabled"><span>变速箱</span></div>
    </div>
    <div class="ui-popup with-mask top" style="display:none;">
      <div name="ui-mask-fade" class="ui-popup-mask" style="display:none;"></div>
      <div name="ui-slide-down" class="ui-popup-box ui-slide-down" style="display:none;">
        <div class="ui-drop-menu-list">
          <div class="ui-radio-list is-align-center">
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="content">正文区域</div>
</div>
`;

exports[`DropMenu - Demo Initial selection 1`] = `
<div class="ui-example-child ui-example-child-drop-menu ui-example-child-drop-menu-1">
  <div class="ui-drop-menu">
    <div class="ui-drop-menu-bar">
      <div class="bar-item selected"><span>排量</span></div>
      <div class="bar-item selected"><span>变速箱</span></div>
    </div>
    <div class="ui-popup with-mask top" style="display:none;">
      <div name="ui-mask-fade" class="ui-popup-mask" style="display:none;"></div>
      <div name="ui-slide-down" class="ui-popup-box ui-slide-down" style="display:none;">
        <div class="ui-drop-menu-list">
          <div class="ui-radio-list is-align-center">
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="content">正文区域</div>
</div>
`;
